@@ -18,6 +18,7 @@ rb-search=Search Recipe Book
 rb-crafter-blueprint=Temporary crafter blueprint
 
 [message]
+rb-did-not-select-object=Did not select an object
 rb-object-has-no-page=Object has no page in the Recipe Book
 
 [gui]
